--- a/LuanVanTotNghiep/Views/Admin/Index.cshtml
+++ b/LuanVanTotNghiep/Views/Admin/Index.cshtml
@@ -213,132 +213,41 @@
                             <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a ui-sref="home" href='#/home'><i class="fa fa-circle-o"></i> Món Ăn</a></li>
+                            <li><a ui-sref="home" href='#/home'><i class="fa fa-circle-o"></i>Trang chủ</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-files-o"></i>
-                            <span>Loại món ăn</span>
-                            <span class="label label-primary pull-right">4</span>
+                            <i class="fa fa-cutlery"></i> <span>Quản lý thông tin nhà hàng</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a ui-sref="loaimonan" href="#loaimonan"><i class="fa fa-circle-o"></i> loai Món Ăn</a></li>
-                            <li><a ui-sref="monan" href="#monan"><i class="fa fa-circle-o"></i> Món Ăn</a></li>
-                            <li><a ui-sref="them_monan" href="#them_monan"><i class="fa fa-circle-o"></i> Them Món Ăn</a></li>
-                            <li><a ui-sref="sua_monan" href="#sua_monan"><i class="fa fa-circle-o"></i> sua Món Ăn</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="../widgets.html">
-                            <i class="fa fa-th"></i> <span>Widgets</span> <small class="label pull-right bg-green">Hot</small>
-                        </a>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-pie-chart"></i>
-                            <span>Charts</span>
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                            <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                            <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                            <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                            <li><a ui-sref="nhahang" href="#nhahang"><i class="fa fa-circle-o"></i>Nhà Hàng</a></li>
+                            <li><a ui-sref="tang" href="#tang"><i class="fa fa-circle-o"></i>Tầng</a></li>
+                            <li><a ui-sref="ban" href="#ban"><i class="fa fa-circle-o"></i>Bàn</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-laptop"></i>
-                            <span>UI Elements</span>
-                            <i class="fa fa-angle-left pull-right"></i>
+                            <i class="fa fa-cutlery"></i> <span>Quản lý thông tin món Ăn</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="../UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
-                            <li><a href="../UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-                            <li><a href="../UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                            <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                            <li><a href="../UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                            <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+                            <li><a ui-sref="monan" href="#monan"><i class="fa fa-circle-o"></i>Món Ăn</a></li>
+                            <li><a ui-sref="loaimonan" href="#loaimonan"><i class="fa fa-circle-o"></i>Loại Món Ăn</a></li>
+                            <li><a ui-sref="dvtinh" href="#dvtinh"><i class="fa fa-circle-o"></i>Đơn vị tính</a></li>
+                            <li><a ui-sref="hinhanh" href="#hinhanh"><i class="fa fa-circle-o"></i>Hình ảnh</a></li>
                         </ul>
                     </li>
+
                     <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-edit"></i> <span>Forms</span>
-                            <i class="fa fa-angle-left pull-right"></i>
+                            <i class="fa fa-users"></i> <span>Quản lý thông tin nhân sự</span> <i class="fa fa-angle-left pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                            <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                            <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+                            <li><a ui-sref="chucvu" href="#chucvu"><i class="fa fa-circle-o"></i>Chức vụ</a></li>
+                            <li><a ui-sref="nhanvien" href="#nhanvien"><i class="fa fa-circle-o"></i>Nhân viên</a></li>
+                            <li><a ui-sref="taikhoan" href="#taikhoan"><i class="fa fa-circle-o"></i>Tài khoản</a></li>
                         </ul>
                     </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-table"></i> <span>Tables</span>
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                            <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="../calendar.html">
-                            <i class="fa fa-calendar"></i> <span>Calendar</span>
-                            <small class="label pull-right bg-red">3</small>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../mailbox/mailbox.html">
-                            <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                            <small class="label pull-right bg-yellow">12</small>
-                        </a>
-                    </li>
-                    <li class="treeview active">
-                        <a href="#">
-                            <i class="fa fa-folder"></i> <span>Examples</span>
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                            <li><a href="profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-                            <li><a href="login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-                            <li><a href="register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-                            <li><a href="lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                            <li><a href="404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                            <li><a href="500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                            <li class="active"><a href="blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-                        </ul>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-share"></i> <span>Multilevel</span>
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                            <li>
-                                <a href="#"><i class="fa fa-circle-o"></i> Level One <i class="fa fa-angle-left pull-right"></i></a>
-                                <ul class="treeview-menu">
-                                    <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-circle-o"></i> Level Two <i class="fa fa-angle-left pull-right"></i></a>
-                                        <ul class="treeview-menu">
-                                            <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                                            <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
-                    <li class="header">LABELS</li>
-                    <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-                    <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-                    <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
                 </ul>
             </section>
             <!-- /.sidebar -->
@@ -528,12 +437,19 @@
     <script src="~/Assets/admin/js/app.min.js"></script>
     <!-- Begin embed angularJS -->
     <script src="~/Scripts/js/angular.js"></script>
-    @*<script src="http://code.angularjs.org/1.2.13/angular.js"></script>*@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/loaiMonAnController.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
+    <!--module-->
     <script src="~/app/components/monan/monanListController.js"></script>
+    <script src="~/app/donViTinhController.js"></script>
+    <script src="~/app/hinhAnhController.js"></script>
+    <script src="~/app/nhaHangController.js"></script>
+    <script src="~/app/tangController.js"></script>
+    <script src="~/app/chucVuController.js"></script>
+    <script src="~/app/nhanVienController.js"></script>
+    <script src="~/app/taiKhoanController.js"></script>
 </body>
 </html>
 
