--- a/LuanVanTotNghiep/app/View/KhachHang.html
+++ b/LuanVanTotNghiep/app/View/KhachHang.html
@@ -1,4 +1,4 @@
-﻿ <style>
+﻿<style>
     * {
         box-sizing: border-box;
     }
@@ -17,16 +17,17 @@
         display: table;
         clear: both;
     }
-</style> <!-- Content Header (Page header) -->
+</style>
+ <!-- Content Header (Page header) -->
 
 <section class="content-header">
     <h1>
-        Danh sách nhân viên
+        Danh sách khách hàng 
     </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
-        <li><a href="#">Nhân sự</a></li>
-        <li class="active">Danh mục nhân viên</li>
+        <li><a href="#">Khách hàng</a></li>
+        <li class="active">Danh mục khách hàng</li>
     </ol>
 </section>
 <!-- Main content -->
@@ -34,7 +35,7 @@
     <!-- Default box -->
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Danh mục nhân viên</h3>
+            <h3 class="box-title">Danh mục Khách hàng</h3>
             <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="thu phóng"><i class="fa fa-minus"></i></button>
                 <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="đóng"><i class="fa fa-times"></i></button>
@@ -44,73 +45,88 @@
             <div class="row">
                 <div class="col-md-12">
                     <strong class="error">{{error}}</strong>
-                    <form name="addnhanvien" class="form-horizontal" style="width: 800px">
+                    <form name="addkhachhang" class="form-horizontal" style="width: 1000px">
                         <div class="row">
                             <div class="column">
                                 <div class="form-group">
-                                    <label for="manv" class="col-sm-2 control-label">Mã nhân viên</label>
+                                    <label for="makh" class="col-sm-2 control-label">Mã khách hàng</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="manv" placeholder="Tạo tự dộng và không được thay đổi" ng-model="newnv.MANV" disabled />
+                                        <input type="text" class="form-control" id="makh" placeholder="Tạo tự dộng và không được thay đổi" ng-model="newkh.MAKH" disabled />
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="manhahang" class="col-sm-2 control-label">Mã nhà hàng</label>
+                                    <label for="maloaikh" class="col-sm-2 control-label">Loại khách hàng</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="manhahang" placeholder="" ng-model="newnv.MANHAHANG" required />
+                                        <input type="text" class="form-control" id="maloaikh" placeholder="" ng-model="newkh.MALOAI_KH" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="macv" class="col-sm-2 control-label">Chức vụ</label>
+                                    <label for="madatban" class="col-sm-2 control-label">Đặt bàn</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="macv" placeholder="" ng-model="newnv.MACV" required />
+                                        <input type="text" class="form-control" id="madatban" placeholder="" ng-model="newkh.MADATBAN" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="tennv" class="col-sm-2 control-label">Họ và tên</label>
+                                    <label for="hoten" class="col-sm-2 control-label">Họ và tên</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="tennv" placeholder="" ng-model="newnv.HOTEN_NV" required />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="column">
-                                <div class="form-group">
-                                    <label for="sdt" class="col-sm-2 control-label">Số điện thoại</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="sdt" placeholder="" ng-model="newnv.SDT_NV" required />
+                                        <input type="text" class="form-control" id="hoten" placeholder="" ng-model="newkh.HOTEN_KH" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="diachi" class="col-sm-2 control-label">Địa chỉ</label>
                                     <div class="col-sm-10">
-                                        <textarea type="text" class="form-control" id="diachi" placeholder="" ng-model="newnv.DIACHI_NV" required />
+                                        <input type="text" class="form-control" id="diachi" placeholder="" ng-model="newkh.DIACHI_KH" required />
                                     </div>
                                 </div>
+
                                 <div class="form-group">
                                     <label for="email" class="col-sm-2 control-label">Email</label>
                                     <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="emailnv" placeholder="" ng-model="newnv.EMAIL_NV" required />
+                                        <input type="email" class="form-control" id="emailnv" placeholder="" ng-model="newkh.EMAIL_KH" required />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="column">
+
+                                <div class="form-group">
+                                    <label for="sdt" class="col-sm-2 control-label">SĐT</label>
+                                    <div class="col-sm-10">
+                                        <textarea type="text" class="form-control" id="sdt" placeholder="" ng-model="newkh.SDT_KH" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="ngaysinh" class="col-sm-2 control-label">Ngày sinh</label>
                                     <div class="col-sm-10">
-                                        <input type="date" class="form-control" id="ngaysinh" placeholder="" ng-model="newnv.NGAYSINH_NV" />
+                                        <input type="date" class="form-control" name="ngaysinh" placeholder="" ng-model="newkh.NGAYSINH_KH" />
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="gioitinh" class="col-sm-5 control-label">Giới tính</label>
                                     <div class="col-sm-7 space">
-                                        <input type="radio" name="gioitinh" ng-model="newnv.GIOITINH_NV" ng-value="true" /> Nam
-                                        <input type="radio" name="gioitinh" ng-model="newnv.GIOITINH_NV" ng-value="false" /> Nữ
+                                        <input type="radio" name="gioitinh" ng-model="newkh.GIOITINH_KH" ng-value="true" /> Nam
+                                        <input type="radio" name="gioitinh" ng-model="newkh.GIOITINH_KH" ng-value="false" /> Nữ
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="tendangnhap" class="col-sm-2 control-label">Tên đăng nhập</label>
+                                    <div class="col-sm-10 space">
+                                        <input type="text" class="form-control" id="tendangnhap" placeholder="" ng-model="newkh.TENDANGNHAP_KH" />
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="matkhau" class="col-sm-2 control-label">Mật khẩu</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" id="matkhau" placeholder="" ng-model="newkh.MATKHAU_KH" />
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-                        <div class="form-group space">
+                        <br />
+                        <br /><br /><br />
+                        <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <input type="submit" value="Thêm mới" ng-click="add()" ng-show="addShow" ng-disabled="!addnhanvien.$valid" class="btn btn-success" />
-                                <input type="submit" value="Chỉnh sửa" ng-click="update()" ng-show="updateShow" ng-disabled="!addnhanvien.$valid" class="btn btn-primary" />
+                                <input type="submit" value="Thêm mới" ng-click="add()" ng-show="addShow" ng-disabled="!addkhachhang.$valid" class="btn btn-success" />
+                                <input type="submit" value="Chỉnh sửa" ng-click="update()" ng-show="updateShow" ng-disabled="!addkhachhang.$valid" class="btn btn-primary" />
                                 <input type="button" value="Hủy bỏ" ng-click="cancel()" class="btn btn-default" />
                             </div>
                         </div>
@@ -126,45 +142,52 @@
                         <table class="table table-bordered table-hover" style="width: 850px; margin-left: 70px;">
                             <tr>
                                 <th>Mã nhân viên</th>
-                                <th>Nhà hàng</th>
-                                <th>Chức vụ</th>
+                                <th>Loại khách hàng</th>
+                                <th>Mã đặt bàn</th>
                                 <th>Họ tên</th>
-                                <th>Số điện thoại</th>
                                 <th>Địa chỉ</th>
                                 <th>Email</th>
+                                <th>Số điện thoại</th>
                                 <th>Ngày sinh</th>
                                 <th>Giới tính</th>
+                                <th>Tên đăng nhập</th>
+                                <th>Mật khẩu</th>
                                 <th>Actions</th>
                             </tr>
-                            <tr ng-repeat="nhanvien in nhanviens">
+                            <tr ng-repeat="khachhang in khachhangs">
                                 <td>
-                                    <p>{{ nhanvien.MANV }}</p>
+                                    <p>{{ khachhang.MAKH }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.MANHAHANG }}</p>
+                                    <p>{{ khachhang.MALOAI_KH }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.MACV }}</p>
+                                    <p>{{ khachhang.MADATBAN }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.HOTEN_NV }}</p>
+                                    <p>{{ khachhang.HOTEN_KH }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.SDT_NV }}</p>
+                                    <p>{{ khachhang.DIACHI_NV }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.DIACHI_NV }}</p>
+                                    <p>{{ khachhang.EMAIL_NV }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.EMAIL_NV }}</p>
+                                    <p>{{ khachhang.SDT_NV }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.NGAYSINH_NV }}</p>
+                                    <p>{{ khachhang.NGAYSINH_NV | date : "dd/MM/y" }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ nhanvien.GIOITINH_NV }}</p>
+                                    <p>{{ khachhang.GIOITINH_NV ? 'Nam' : 'Nữ'  }}</p>
                                 </td>
-
+                                <td>
+                                    <p>{{ khachhang.TENDANGNHAP_KH }}</p>
+                                </td>
+                                <td>
+                                    <p>{{ khachhang.MATKHAU_KH }}</p>
+                                </td>
                                 <td>
                                     <p><a class="btn btn-primary btn-xs" ng-click="edit()" href="javascript:void(0);"><span class="glyphicon glyphicon-pencil"></span></a> | <a class="btn btn-danger btn-xs" ng-click="delete()" href="javascript:void(0);"><span class="glyphicon glyphicon-trash"></span></a></p>
                                 </td>
