--- a/LuanVanTotNghiep/app/View/ThucPham.html
+++ b/LuanVanTotNghiep/app/View/ThucPham.html
@@ -1,12 +1,12 @@
 ﻿  <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
-        Danh sách tầng
+        Danh sách thực phẩm
     </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
-        <li><a href="#">Tầng</a></li>
-        <li class="active">Danh mục tầng</li>
+        <li><a href="#">Thực phẩm</a></li>
+        <li class="active">Danh mục thực phẩm</li>
     </ol>
 </section>
 <!-- Main content -->
@@ -14,7 +14,7 @@
     <!-- Default box -->
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">Danh mục tầng </h3>
+            <h3 class="box-title">Danh mục thực phẩm</h3>
             <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
                 <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
@@ -24,30 +24,29 @@
             <div class="row">
                 <div class="col-md-12">
                     <strong class="error">{{error}}</strong>
-                    <form name="addtang" style="width: 800px; margin: 0px auto;">
+                    <form name="addthucpham" class="form-horizontal" style="width: 800px; ">
                         <div class="form-group">
-                            <label for="manhahang" class="col-sm-2 control-label">Mã nhà hàng:</label>
+                            <label for="mathucpham" class="col-sm-2 control-label">Mã thực phẩm</label>
                             <div class="col-sm-10 space">
-                                <input type="text" class="form-control" id="manhahang" placeholder="" ng-model="newt.MANHAHANG" required />
+                                <input type="text" class="form-control" id="mathucpham" placeholder="Tạo tự dộng và không được thay đổi" ng-model="newthucpham.MATHUCPHAM" disabled />
                             </div>
                         </div>
-                        <!--<div class="form-group">
-                            <label for="manhahang" class="col-sm-2 control-label">Mã nhà hàng:</label>
-                            <div class="col-sm-10 space">
-                                <select ng-model="selectedMaNhaHang" ng-options="x for x in nhahangs"></select>
-                            </div>
-                        </div>-->
-                        <br />
                         <div class="form-group">
-                            <label for="tentang" class="col-sm-2 control-label">Tên tầng:</label>
+                            <label for="tenthucpham" class="col-sm-2 control-label">Tên thực phẩm</label>
                             <div class="col-sm-10 space">
-                                <input type="text" class="form-control" id="tentang" placeholder="" ng-model="newt.TENTANG" required />
+                                <input type="text" class="form-control" id="tenthucpham" placeholder="" ng-model="newthucpham.TENTHUCPHAM" required />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="dvtinh" class="col-sm-2 control-label">Đơn vị tính</label>
+                            <div class="col-sm-10 space">
+                                <input type="text" class="form-control" id="dvtinh" placeholder="" ng-model="newthucpham.DVTINH" required />
                             </div>
                         </div>
                         <div class="form-group space">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <input type="submit" value="Thêm mới" ng-click="add()" ng-show="addShow" ng-disabled="!addtang.$valid" class="btn btn-success" />
-                                <input type="submit" value="Chỉnh sửa" ng-click="update()" ng-show="updateShow" ng-disabled="!addtang.$valid" class="btn btn-primary" />
+                                <input type="submit" value="Thêm mới" ng-click="add()" ng-show="addShow" ng-disabled="!addthucpham.$valid" class="btn btn-success" />
+                                <input type="submit" value="Chỉnh sửa" ng-click="update()" ng-show="updateShow" ng-disabled="!addthucpham.$valid" class="btn btn-primary" />
                                 <input type="button" value="Hủy bỏ" ng-click="cancel()" class="btn btn-default" />
                             </div>
                         </div>
@@ -60,20 +59,20 @@
                     <div class="table-responsive">
                         <table class="table table-bordered table-hover" style="width: 800px; margin-left: 170px;">
                             <tr>
-                                <th>Mã tầng</th>
-                                <th>Nhà hàng</th>
-                                <th>Tên tầng</th>
+                                <th>Mã thực phẩm</th>
+                                <th>Tên gọi</th>
+                                <th>Đơn vị tính</th>
                                 <th>Actions</th>
                             </tr>
-                            <tr ng-repeat="tang in tangs">
+                           <tr ng-repeat="thucpham in thucphams">
                                 <td>
-                                    <p>{{ tang.MATANG }}</p>
+                                    <p>{{ thucpham.MATHUCPHAM }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ tang.MANHAHANG }}</p>
+                                    <p>{{ thucpham.TENTHUCPHAM }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ tang.TENTANG }}</p>
+                                    <p>{{ thucpham.DVTINH }}</p>
                                 </td>
                                 <td>
                                     <p><a class="btn btn-primary btn-xs" ng-click="edit()" href="javascript:void(0);"><span class="glyphicon glyphicon-pencil"></span></a> | <a class="btn btn-danger btn-xs" ng-click="delete()" href="javascript:void(0);"><span class="glyphicon glyphicon-trash"></span></a></p>
